--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@
                         <a href="#">Shop Sets</a></div>
                 </div>
             </div>
+            <div class="meet-dae">
+                <div class="img-box">
+                    <img src="./img/qiz rasm.png" alt="">
+                </div>
+                <div class="img-text">
+                    <div class="img-text-box">
+
+                        <h4>Meet Dae</h4>
+                        <p>We’re a haircare line based in sunny Arizona. Our products are made up of the many things that make our home special, including the scent of orange blossoms in the air, colors of majestic sunsets and nourishing ingredients derived
+                            from desert botanicals. We believe haircare doesn’t have to be complicated and aimed to make a line that is simple and effective. We hope that dae plays a special role in your everyday hair routine from sunrise to sunset and
+                            allows you to feel the warmth of the desert wherever you are.</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
         </main>
 
     </div>
