--- a/index.html
+++ b/index.html
@@ -101,7 +101,62 @@
                 </div>
             </div>
         </main>
+        <footer class="footer">
+            <div class="follow-use">
+                <h4>Follow Us @daehair</h4>
+                <ul>
+                    <li>
+                        <a href="#"> <img src="/img/Frame.png" alt="img"></a>
+                    </li>
+                    <li>
+                        <a href="#"> <img src="/img/Frame (1).png" alt="img"></a>
+                    </li>
+                    <li>
+                        <a href="#"> <img src="/img/Frame (2).png" alt="img"></a>
+                    </li>
+                    <li>
+                        <a href="#"> <img src="/img/Frame (3).png" alt="img"></a>
+                    </li>
+                    <li>
+                        <a href="#"> <img src="/img/Frame (4).png" alt="img"></a>
+                    </li>
+                    <li>
+                        <a href="#"> <img src="/img/Frame (5).png" alt="img"></a>
+                    </li>
+                </ul>
 
+            </div>
+            <div class="follow-link">
+                <div class="link-left">
+                    <ul>
+                        <li>
+                            <a href="#">Sustainability</a><br><br>
+                            <a href="#">Contact Us</a><br><br>
+                            <a href="#">FAQ</a><br><br>
+                            <a href="#">Careers</a><br><br>
+                        </li>
+                        <li>
+                            <a href="#">Privacy Policy</a><br><br>
+                            <a href="#">CA Privacy Rights</a><br><br>
+                            <a href="#">Terms of Use</a><br><br>
+                            <a href="#">News letter</a><br><br>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="link-right">
+                    <ul>
+                        <li>
+                            <a href="#">Privacy Policy</a><br><br>
+                            <input type="text" required><br><br>
+                            <a href="#">Terms of Use</a><br><br>
+                            <a href="#">News letter</a><br><br>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </footer>
     </div>
 </body>
 
